instructions.Instructions.scala.code
brushUp()
forward()
right()
backward()
left()
brushdown()